@@ -1,5 +1,3 @@
-AUTOMAKE_OPTIONS = gnu
-
 # including headers for make dist
 noinst_HEADERS = \
 	GraphProcessor.h \
