@@ -1,5 +1,3 @@
-AUTOMAKE_OPTIONS = gnu
-
 # global preprocessor flags
 AM_CPPFLAGS = \
     -I$(top_srcdir)/include \
