@@ -1,4 +1,2 @@
-AUTOMAKE_OPTIONS = gnu
-
 SUBDIRS = dlvhex
 
